--- a/data/blog/2022-04-20-hotwire-is-here-to-stay.mdx
+++ b/data/blog/2022-04-20-hotwire-is-here-to-stay.mdx
@@ -5,9 +5,10 @@ date: '2022-04-20'
 tags: ['rails', 'hotwire']
 draft: false
 summary: It’s been four months since Rails 7 was released
-thumbnail: shay-1S6VJgQ-xTQ-unsplash.jpg
-thumbnail_attribution_id: 1S6VJgQ-xTQ
-thumbnail_author: Shay
+thumbnail:
+  id: 1S6VJgQ-xTQ
+  author: Shay
+  # img: shay-1S6VJgQ-xTQ-unsplash.jpg
 ---
 
 It’s been four months since Rails 7 was released (Rails 7.0.0 was officially released on the 15th of December 2021). We saw Hotwire getting some excellent traction during this period and becoming universally accepted. It became the de-facto standard for building new Web applications in the Rails world.
