Rbenv url was missing in a link

--- a/data/blog/2023-02-01-using-rails-7-with-yjit.mdx
+++ b/data/blog/2023-02-01-using-rails-7-with-yjit.mdx
@@ -30,7 +30,7 @@ if you are looking to squeeze and extract the last bit of performance out of the
 
 ## How to install YJIT with rbenv and Ruby 3.2
 
-[rbenv](rbenv) is Ruby version manager of my choice and I'll show you how to install YJIT with it.
+[rbenv](https://github.com/rbenv/rbenv) is Ruby version manager of my choice and I'll show you how to install YJIT with it.
 
 **To build YJIT you need rust tools installed on your system**(YJIT is written in [Rust](https://www.rust-lang.org)).
 If you don't have them, you can install them with [rustup](https://rustup.rs/).
