Improve front page

--- a/data/authors/dusan.mdx
+++ b/data/authors/dusan.mdx
@@ -12,8 +12,7 @@ import skills from '@/data/skills.json'
 Hola! My name is **Dusan**. Some people know me as [netoff](https://github.com/netoff).
 
 I’ve been in **Software Engineering** and **Web Development** for more than half of my life.
-I have **15+ years** of experience with **Ruby on Rails**, and **7+ years** of experience with
-**React/JS**.
+I have **15+ years** of experience with **Ruby on Rails**.
 
 I am the [**Ruby School**](https://rubysoft.dev/ruby_school) and [**Turbo Funnel**](https://turbofunnelapp.com) creator,
 and I running them passionately is what I do day to day. **Ruby School** is the easiest way for non-programmers
