--- a/data/authors/dusan.mdx
+++ b/data/authors/dusan.mdx
@@ -14,15 +14,14 @@ Hola! My name is **Dusan**. Some people know me as [netoff](https://github.com/n
 I’ve been in **Software Engineering** and **Web Development** for more than half of my life.
 I have **15+ years** of experience with **Ruby on Rails**.
 
-I am the [**Ruby School**](https://rubysoft.dev/ruby_school) and [**Turbo Funnel**](https://turbofunnelapp.com) creator,
-and I running them passionately is what I do day to day. **Ruby School** is the easiest way for non-programmers
-(e.g., non-technical founders) to learn Web Programming. **Turbo Funnel** is the easiest Inbound marketing tool,
-helping people turbocharge their conversions
+I am the author and creator of [**Gemfilecheck**](https://gemfilecheck.com).
+Gemfilecheck is a tool that helps you keep your Ruby and Rails applications secure,
+by scanning it for known issues and vulnerabilities.
 
 My skills include some of the following technologies:
 
 <ul className="m-0 list-none p-0">
-  {Object.entries(skills).map(([lang, title], i) => {
+  {skills.map(([lang, variant, title], i) => {
     return (
       <li key={i} className="flex bg-gray-800 p-2">
         <Image
@@ -30,7 +29,7 @@ My skills include some of the following technologies:
           alt={title}
           width="32"
           height="32"
-          src={`https://cdn.jsdelivr.net/gh/devicons/devicon/icons/${lang}/${lang}-original.svg`}
+          src={`https://cdn.jsdelivr.net/gh/devicons/devicon/icons/${lang}/${variant}.svg`}
         />
         <span className="pl-2 font-bold underline ">{title}</span>
       </li>
