--- a/data/authors/dusan.mdx
+++ b/data/authors/dusan.mdx
@@ -1,7 +1,7 @@
 ---
 handle: netoff
 name: Dusan Pantelic
-avatar: /static/images/dusan.png
+avatar: /images/dusan12.jpeg
 occupation: Full-Stack Software Engineer
 email: me@netoff.dev
 github: https://github.com/netoff
